--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: ffraster
+Package: tidyff
 Title: Create Native raster Files With ff
-Version: 0.0.2
+Version: 0.0.2.9001
 Authors@R: person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com")
 Description: Couplings between raster and ff files.
 Depends:
